--- a/static/css/scatter.css
+++ b/static/css/scatter.css
@@ -88,8 +88,12 @@ svg {
 
 #legend {
 	text-align: center;
-	margin-top: 20px;
-	margin-bottom: 10px;
+	margin-top: 10px;
+	margin-bottom: 5px;
+}
+
+#team-select {
+	text-align: center;
 }
 
 /* Mobile Rules */
