--- a/templates/scatter.html
+++ b/templates/scatter.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-    <a class="navbar-brand" href="#" id="home">NCAA DATA</a>
+    <a class="navbar-brand" href="/" id="home">NCAA DATA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,13 +21,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a id="team-page" class="nav-link" href="#">Team Page</a>
+          <a id="team-page" class="nav-link" href="/team">Team Page</a>
         </li>
         <li class="nav-item">
-          <a id="compare-teams" class="nav-link" href="#">Comparison</a>
+          <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
+        </li>
+        <li class="nav-item active">
+          <a id="compare-scatter" class="nav-link" href="#">Graph <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a id="compare-scatter" class="nav-link" href="#">Graph</a>
+          <a id="reference" class="nav-link" href="/reference">Reference</a>
         </li>
       </ul>
     </div>
