add transition to scatter

--- a/templates/scatter.html
+++ b/templates/scatter.html
@@ -36,7 +36,7 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row" id="filters">
+    <div class="row">
       <div class="col-md-3 col-sm-6 col-xs-12">
         <label for="year-filter">Year</label>
         <div>
@@ -65,7 +65,7 @@
           </select>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="col-md-3 col-sm-6 col-xs-12" id="xAxisFilter">
         <label for="x-axis-filter">X Axis</label>
         <div>
           <select id="x-axis-dropdown" name="x-axis-filter" class="dropdown">
@@ -108,7 +108,7 @@
           </select>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="col-md-3 col-sm-6 col-xs-12" id="yAxisFilter">
         <label for="y-axis-filter">Y Axis</label>
         <div>
           <select id="y-axis-dropdown" name="y-axis-filter" class="dropdown">
