reference sheet and landing page added

--- a/templates/reference.html
+++ b/templates/reference.html
@@ -34,6 +34,151 @@
       </ul>
     </div>
   </nav>
+  <h1>Statistics Reference</h1><br>
+  <h5>Adjuted EM (Adjusted Efficiency Margin)</h5>
+  <ul>
+    <li>Adjusted Offensive Efficiency - Adjusted Defensive Efficiency, ideally the overall gauge of a team's quality</li>
+  </ul>
+  <h5>Adjusted D Efficiency</h5>
+  <ul>
+    <li>Number of points a team allows per 100 defensive possessions, normalized for strength of schedule</li>
+  </ul>
+  <h5>Adjusted O Efficiency</h5>
+  <ul>
+    <li>Number of points a team scores per 100 offensive possessions, normalized for strength of schedule</li>></li>
+  </ul>
+  <h5>Adjusted Tempo</h5>
+  <ul>
+    <li>The number of possessions per 40 minutes (officially FGA-OR+TO+0.42*FTA) adjusted for an opponent's pace of play</li>
+  </ul>
+  <h5>Assist Rate</h5>
+  <ul>
+    <li>The percentage of a team's field goals which are assisted</li>
+  </ul>
+  <h5>Bench</h5>
+  <ul>
+    <li>Percentage of minutes played by non-starters (players playing less than 10% of games not included)</li>
+  </ul>
+  <h5>Block %</h5>
+  <ul>
+    <li>Percentage of opponent's shots which a team blocks</li>
+  </ul>
+  <h5>D Efficiency (Defensive Efficiency</h5>
+  <ul>
+    <li>Number of points a team allows per 100 possessions (unadjusted for opponent)</li>
+  </ul>
+  <h5>D Free Throws</h5>
+  <ul>
+    <li>Overall percentage of points that a team allows from free throws</li>
+  </ul>
+  <h5>D 3 Pointers</h5>
+  <ul>
+    <li>Overall percentage of points that a team allows from 3 point FGs</li>
+  </ul>
+  <h5> D 2 Pointers</h5>
+  <ul>
+    <li>Overall percentage of points that a team allows from 2 point FGs</li>
+  </ul>
+  <h5>D Turnover %</h5>
+  <ul>
+    <li>Percentage of defensive possessions in which a team forces a turnover</li>
+  </ul>
+  <h5>Effective FG% D</h5>
+  <ul>
+    <li>A teams field goal percentage defense with 50% extra weight for 3 Pt field goals allowed ((.5*3FGM + FGM) / FGA)</li>
+  </ul>
+  <h5>Effective FG% O</h5>
+  <ul>
+    <li>A team's field goal percentage with 50% extra weight for 3 Pt FGs ((.5*3FGM + FGM) / FGA)</li>
+  </ul>
+  <h5>Experience</h5>
+  <ul>
+    <li>The average experience of rostered players, weighted for minutes played (0= freshman, 1= sophomore, 2= junior, 3= senior)</li>
+  </ul>
+  <h5>Free Throw Rate D</h5>
+  <ul>
+    <li>Opponent's number of free throws per field goal attempt (FTA/FGA)</li>
+  </ul>
+  <h5>Free Throw Rate O</h5>
+  <ul>
+    <li>Number of free throws a team shoots per field goal attempt (FTA/FGA)</li>
+  </ul>
+  <h5>Free Throw %</h5>
+  <ul>
+    <li>A team's free throw percentage (free throws made/free throw attempts)</li>
+  </ul>
+  <h5>O Efficiency</h5>
+  <ul>
+    <li>Points scored per 100 possessions (unadjusted)</li>
+  </ul>
+  <h5>O Free Throws</h5>
+  <ul>
+    <li>Overall percentage of points a team scores from free throws</li>
+  </ul>
+  <h5>O Rebound % Allowed</h5>
+  <ul>
+    <li>Percentage of opponent's missed shots that the opponent rebound</li>
+  </ul>
+  <h5>O Rebound % Earned</h5>
+  <ul>
+    <li>Overall percentage of a team's missed shots they are able to rebound</li>
+  </ul>
+  <h5>O 3 Pointers</h5>
+  <ul>
+    <li>Overall percentage of points scored by 3 Pt FGs</li>
+  </ul>
+  <h5>O 2 Pointers</h5>
+  <ul>
+    <li>Overall percentage of points scored by 2 Pt FGs</li>
+  </ul>
+  <h5>O Turnover %</h5>
+  <ul>
+    <li>Percentage of possessions in which a team commits a turnover</li>
+  </ul>
+  <h5>Opponent Assist Rate</h5>
+  <ul>
+    <li>Opponent's percentage of FGs in which the FG was assisted</li>
+  </ul>
+  <h5>Opponent Block %</h5>
+  <ul>
+    <li>Percentage of shots blocked by the opponent</li>
+  </ul>
+  <h5>Opponent Free Throw %</h5>
+  <ul>
+    <li>Opponent's free throw percentage (free throws made/free throws attempted)</li>
+  </ul>
+  <h5>Opponent 3 Pt FG%</h5>
+  <ul>
+    <li>Opponent's 3 Pt FG% (three pointers made/three pointers attempted)</li>
+  </ul>
+  <h5>Opponent 2 Pt FG%</h5>
+  <ul>
+    <li>Opponent's 2 Pt FG% (two pointers made/two pointers attempted)</li>
+  </ul>
+  <h5>Opponent Steal Rate</h5>
+  <ul>
+    <li>Percentage of possessions in which a team has the ball stolen by the opponent</li>
+  </ul>
+  <h5>Size</h5>
+  <ul>
+    <li>Average height of players in inches (doesn't account for players playing less than 10% of minutes)</li>
+  </ul>
+  <h5>Steal Rate</h5>
+  <ul>
+    <li>Percentage of defensive possessions in which a team gets a steal</li>
+  </ul>
+  <h5>Tempo</h5>
+  <ul>
+    <li>Number of possessions per 40 minutes (unadjusted)</li>
+  </ul>
+  <h5>3 Pt FG%</h5>
+  <ul>
+    <li>Percentage of made 3 Pt FGs (three pointers made/three pointers attempted)</li>
+  </ul>
+  <h5>2 Pt FG%</h5>
+  <ul>
+    <li>Percentage of made 2 Pt FGs (two pointers made/two pointers attempted</li>
+  </ul>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
