--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-    <a class="navbar-brand active" href="#" id="home">NCAA DATA <span class="sr-only">(current)</span></a>
+    <a class="navbar-brand active" href="/home" id="home">NCAA DATA <span class="sr-only">(current)</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
