--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
   <title>NCAA Team Data</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-    <a class="navbar-brand active" href="#" id="home">NCAA DATA <span class="sr-only">(current)</span></a>
+    <a class="navbar-brand active" href="/home" id="home">NCAA DATA <span class="sr-only">(current)</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -36,12 +37,21 @@
 
 
   <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
-      content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div id="background">
+      <h1 class="display-4">March Madness Companion <img src="../images/marchmadnesslogo-18_resizedjpg.jpg" height="155" width="300" alt="mm_logo"></h1>
+      <p class="lead">March Madness is the best time of the year. 68 teams enter a single-elimination tournamnet with the chance to win 6 games and call themselves a National Champion. Every year, fans spend hours obsessively filling out their bracket to predict winners for every game of the tournamnet. In 2019 it was estimated that over 70 MILLION brackets were submitted online and zero of these were 100% accurate.</p>
+      <hr class="my-4">
+      <p>The purpose of this project is to give fans an interactive tool to utilize when filling out their brackets. The data comes from kenpom.com, a respected advanced basketball analytics website that is now used by the NCAA selection committee when seeding teams for the tournamnet.</p>
+      <p>Navigate Through the website and uncover your own hidden trends. You can find:</p>
+      <ul>
+        <li>Detailed profiles on all 353 teams for every year since 2010</li>
+        <li>A page to compare any two teams since 2010 </li>
+        <li>An interactive scatter plot allowing you to filter over 36 different statistical fields</li>
+        <li>Ability to compare a team against past final four and championship teams</li>
+        <li>A reference page explaining each of the statistics</li>
+      </ul>
+      <a class="btn btn-primary btn-lg" href="www.kenpom.com" role="button">kenpom Home Page</a>
+    </div>
   </div>
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -50,5 +60,6 @@
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
