--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -28,6 +28,9 @@
         <li class="nav-item">
           <a id="compare-scatter" class="nav-link" href="/scatter">Graph</a>
         </li>
+        <li class="nav-item">
+          <a id="compare-scatter" class="nav-link" href="/reference">Reference</a>
+        </li>
       </ul>
     </div>
   </nav>
