doughnunt team page w/index, formatting on comparison page

--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -37,7 +37,9 @@
   <div class="container mt-2" style="text-align: center" id="change-team">
     <div id="team-select">
       <div class="container" style="text-align: center">
-        <h5>Select Two Teams</h5>
+        <h2>Select Two Teams</h2>
+        <hr style="border: 1px solid black;" />
+        <h4>Key Factors</h4>
       </div>
       <div class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
@@ -790,6 +792,8 @@
   <div class="container" id="barContainer">
     <canvas id="doubleBar" height="110px"></canvas>
   </div>
+  <hr style="border: 1px solid black;" />
+  <hr style="border: 1px solid black;" />
   <h4 style="text-align: center">Four Factors</h4>
   <div class="row">
     <div class="col-md-6 col-sm-12 col-xs-6" id="home-radar-ff">
@@ -799,6 +803,8 @@
       <canvas id="awayRadarFF" aspectRatio="1"></canvas>
     </div>
   </div>
+  <hr style="border: 1px solid black;" />
+  <hr style="border: 1px solid black;" />
   <h4 style="text-align: center">National Rankings</h4>
   <div class="row">
     <div class="col-md-6 col-sm-12 col-xs-6" id="home-radar-rank">
@@ -808,6 +814,8 @@
       <canvas id="awayRadarRank" aspectRatio="1"></canvas>
     </div>
   </div>
+  <hr style="border: 1px solid black;" />
+  <hr style="border: 1px solid black;" />
   <h4 style="text-align: center">Offensive Point Distribution</h4>
   <div class="row">
     <div class="col-md-6 col-sm-6 col-xs-6" id="home-o-donut">
@@ -817,6 +825,8 @@
       <canvas id="awayODonut" aspectRatio="1"></canvas>
     </div>
   </div>
+  <hr style="border: 1px solid black;" />
+  <hr style="border: 1px solid black;" />
   <h4 style="text-align: center">Defensive Point Distribution</h4>
   <div class="row">
     <div class="col-md-6 col-sm-6 col-xs-6" id="home-d-donut">
