add team color support and fix scatter axes

--- a/bracket_buddy/templates/comparison.html
+++ b/bracket_buddy/templates/comparison.html
@@ -134,7 +134,7 @@
               <option value="Detroit">Detroit</option>
               <option value="Drake">Drake</option>
               <option value="Drexel">Drexel</option>
-              <option value="Duke" selected>Duke</option>
+              <option value="Duke">Duke</option>
               <option value="Duquesne">Duquesne</option>
               <option value="East Carolina">East Carolina</option>
               <option value="East Tennessee St.">East Tennessee St.</option>
@@ -228,7 +228,7 @@
               <option value="Miami FL">Miami FL</option>
               <option value="Miami OH">Miami OH</option>
               <option value="Michigan">Michigan</option>
-              <option value="Michigan St.">Michigan St.</option>
+              <option value="Michigan St." selected>Michigan St.</option>
               <option value="Middle Tennessee">Middle Tennessee</option>
               <option value="Milwaukee">Milwaukee</option>
               <option value="Minnesota">Minnesota</option>
@@ -627,7 +627,7 @@
               <option value="Nicholls St.">Nicholls St.</option>
               <option value="NJIT">NJIT</option>
               <option value="Norfolk St.">Norfolk St.</option>
-              <option value="North Carolina" selected>North Carolina</option>
+              <option value="North Carolina">North Carolina</option>
               <option value="North Carolina A&amp;T">North Carolina A&amp;T</option>
               <option value="North Carolina Central">North Carolina Central</option>
               <option value="North Carolina St.">North Carolina St.</option>
@@ -724,7 +724,7 @@
               <option value="Texas Pan American">Texas Pan American</option>
               <option value="Texas Southern">Texas Southern</option>
               <option value="Texas St.">Texas St.</option>
-              <option value="Texas Tech">Texas Tech</option>
+              <option value="Texas Tech" selected>Texas Tech</option>
               <option value="The Citadel">The Citadel</option>
               <option value="Toledo">Toledo</option>
               <option value="Towson">Towson</option>
