--- a/bracket_buddy/templates/reference.html
+++ b/bracket_buddy/templates/reference.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-    <a class="navbar-brand active" href="/" id="home">NCAA DATA <span class="sr-only">(current)</span></a>
+    <a class="navbar-brand active" href="/" id="home">NCAA DATA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,7 +30,7 @@
           <a id="compare-scatter" class="nav-link" href="/scatter">Graph</a>
         </li>
         <li class="nav-item active">
-          <a id="reference" class="nav-link" href="/reference">Reference</a>
+          <a id="reference" class="nav-link" href="#">Reference</a>
         </li>
       </ul>
     </div>
@@ -39,7 +39,7 @@
     <h1>Statistics Reference</h1><br>
     <h5>Adjuted EM (Adjusted Efficiency Margin)</h5>
     <ul>
-      <p>Adjusted Offensive Efficiency - Adjusted Defensive Efficiency, ideally the overall gauge of a team's quality
+      <p>Adjusted Offensive Efficiency - Adjusted Defensive Efficiency, ideally the overall gauge of a team's quality. (raw value + 100 for graphing purposes)
       </p>
     </ul>
     <h5>Adjusted D Efficiency</h5>
@@ -67,7 +67,7 @@
     <ul>
       <p>Percentage of opponent's shots which a team blocks</p>
     </ul>
-    <h5>D Efficiency (Defensive Efficiency</h5>
+    <h5>D Efficiency (Defensive Efficiency)</h5>
     <ul>
       <p>Number of points a team allows per 100 possessions (unadjusted for opponent)</p>
     </ul>
@@ -151,7 +151,7 @@
     </ul>
     <h5>Opponent Free Throw %</h5>
     <ul>
-      <p>Opponent's free throw percentage (free throws made/free throws attempted)</p>
+      <p>Opponent free throw percentage (free throws made/free throws attempted)</p>
     </ul>
     <h5>Opponent 3 Pt FG%</h5>
     <ul>
