--- a/bracket_buddy/templates/scatter.html
+++ b/bracket_buddy/templates/scatter.html
@@ -76,7 +76,8 @@
                 <label for="x-axis-filter">X Axis</label>
                 <div>
                   <select id="x-axis-dropdown" name="x-axis-filter" class="dropdown">
-                    <option value="Tempo" data-label="Tempo" selected>Tempo</option>
+                    <option value="AdjEM" data-label="Adj. Efficiency Margin" selected>Adj. Efficiency Margin</option>
+                    <option value="Tempo" data-label="Tempo">Tempo</option>
                     <option value="AdjTempo" data-label="Adj. Tempo">Adj. Tempo</option>
                     <option value="OE" data-label="Offensive Efficiency">O Efficiency</option>
                     <option value="AdjOE" data-label="Adjusted Offensive Efficiency">Adjusted O Efficiency</option>
@@ -120,9 +121,10 @@
                 <label for="y-axis-filter">Y Axis</label>
                 <div>
                   <select id="y-axis-dropdown" name="y-axis-filter" class="dropdown">
-                    <option value="Tempo" data-label="Tempo">Tempo</option>
+                    <option value="AdjEM" data-label="Adj. Efficiency Margin">Adj. Efficiency Margin</option>
+                    <option value="Tempo" data-label="Tempo" selected>Tempo</option>
                     <option value="AdjTempo" data-label="Adj. Tempo">Adj. Tempo</option>
-                    <option value="OE" data-label="Offensive Efficiency" selected>O Efficiency</option>
+                    <option value="OE" data-label="Offensive Efficiency">O Efficiency</option>
                     <option value="AdjOE" data-label="Adjusted Offensive Efficiency">Adjusted O Efficiency</option>
                     <option value="DE" data-label="Defensive Efficiency">DEfficiency</option>
                     <option value="AdjDE" data-label="Adjusted Defensive Efficiency">Adjusted D Efficiency</option>
