--- a/bracket_buddy/templates/teamPage.html
+++ b/bracket_buddy/templates/teamPage.html
@@ -429,7 +429,8 @@
         <label for="history-filter">Change Stat</label>
         <div>
           <select id="history-filter" name="history-filter" class="dropdown">
-            <option value="Tempo" data-label="Tempo" selected>Tempo</option>
+            <option value="AdjEM" data-label="Adj. Efficiency Margin" selected>Adj. Efficiency Margin</option>
+            <option value="Tempo" data-label="Tempo">Tempo</option>
             <option value="AdjTempo" data-label="Adj. Tempo">Adj. Tempo</option>
             <option value="OE" data-label="Offensive Efficiency">O Efficiency</option>
             <option value="AdjOE" data-label="Adjusted Offensive Efficiency">Adjusted O Efficiency</option>
