--- a/templates/reference.html
+++ b/templates/reference.html
@@ -37,9 +37,9 @@
   </nav>
   <div id="content">
     <h1>Statistics Reference</h1><br>
-    <h5>Adjuted EM (Adjusted Efficiency Margin)</h5>
+    <h5>Adjusted EM (Adjusted Efficiency Margin)</h5>
     <ul>
-      <p>Adjusted Offensive Efficiency - Adjusted Defensive Efficiency, ideally the overall gauge of a team's quality</p>
+      <p>Adjusted Offensive Efficiency minus Adjusted Defensive Efficiency, ideally the overall gauge of a team's quality</p>
     </ul>
     <h5>Adjusted D Efficiency</h5>
     <ul>
@@ -87,7 +87,7 @@
     </ul>
     <h5>Effective FG% D</h5>
     <ul>
-      <p>A teams field goal percentage defense with 50% extra weight for 3 Pt field goals allowed ((.5*3FGM + FGM) / FGA)</p>
+      <p>A team's field goal percentage defense with 50% extra weight for 3 Pt field goals allowed ((.5*3FGM + FGM) / FGA)</p>
     </ul>
     <h5>Effective FG% O</h5>
     <ul>
