--- a/templates/index.html
+++ b/templates/index.html
@@ -38,16 +38,16 @@
   <div class="jumbotron">
     <div id="background">
       <h1 class="display-4">Bracket Buddy </h1>
-      <!-- <img src="/mmlogo.png" height="155" width="300" alt="mm_logo"> -->
-      <p class="lead">March Madness is the best time of the year. 68 teams enter a single-elimination tournamnet with the chance to win 6 games and call themselves a National Champion. Every year, fans spend hours obsessively filling out their bracket to predict winners for every game of the tournamnet. In 2019 it was estimated that over 70 MILLION brackets were submitted online and zero of these were 100% accurate.</p>
+      <!-- <img src="../images/mmlogo.png" height="155" width="300" alt="mm_logo"> -->
+      <p class="lead">March Madness is the best time of the year. 68 teams enter a single-elimination tournament with the chance to win 6 games and call themselves a National Champion. Every year, fans spend hours obsessively filling out their bracket to predict winners for every game of the tournament. In 2019 it was estimated that over 70 MILLION brackets were submitted online and zero of these were 100% accurate.</p>
       <hr class="my-4">
-      <p>The purpose of this project is to give fans an interactive tool to utilize when filling out their brackets. The data comes from kenpom.com, a respected advanced basketball analytics website that is now used by the NCAA selection committee when seeding teams for the tournamnet.</p>
-      <p>Navigate Through the website and uncover your own hidden trends. You can find:</p>
+      <p>The purpose of this project is to give fans an interactive tool to utilize when filling out their brackets. The data comes from kenpom.com, a respected advanced basketball analytics website that is now used by the NCAA selection committee when seeding teams for the tournament.</p>
+      <p>Navigate through the website to uncover your own hidden trends and win your bracket pool. Here you can find:</p>
       <ul>
         <li>Detailed profiles on all 353 teams for every year since 2010</li>
         <li>A page to compare any two teams since 2010 </li>
-        <li>An interactive scatter plot allowing you to filter over 36 different statistical fields</li>
-        <li>Ability to compare a team against past final four and championship teams</li>
+        <li>An interactive scatter plot allowing you to filter 36 different statistical fields</li>
+        <li>The ability to compare any team against past final four and championship teams</li>
         <li>A reference page explaining each of the statistics</li>
       </ul>
     </div>
