--- a/bracket_buddy/templates/reference.html
+++ b/bracket_buddy/templates/reference.html
@@ -37,7 +37,7 @@
   </nav>
   <div id="content">
     <h1>Statistics Reference</h1><br>
-    <h5>Adjuted EM (Adjusted Efficiency Margin)</h5>
+    <h5>Adjusted EM (Adjusted Efficiency Margin)</h5>
     <ul>
       <p>Adjusted Offensive Efficiency - Adjusted Defensive Efficiency, ideally the overall gauge of a team's quality. (raw value + 100 for graphing purposes)
       </p>
