--- a/bracket_buddy/templates/teamPage.html
+++ b/bracket_buddy/templates/teamPage.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 sticky-top">
     <a class="navbar-brand" href="/" id="home">NCAA DATA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a id="team-page" class="nav-link" href="#">Team Page <span class="sr-only">(current)</span></a>
+          <a id="team-page" class="nav-link" href="#">Team Page<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
@@ -46,11 +46,11 @@
                   <option value="2012">2012</option>
                   <option value="2013">2013</option>
                   <option value="2014">2014</option>
-                  <option value="2015" selected>2015</option>
+                  <option value="2015">2015</option>
                   <option value="2016">2016</option>
                   <option value="2017">2017</option>
                   <option value="2018">2018</option>
-                  <option value="2019">2019</option>
+                  <option value="2019" selected>2019</option>
                 </select>
               </div>
             </div>
@@ -58,6 +58,7 @@
               <label for="team-filter">Team</label>
               <div>
                 <select id="team-dropdown" name="team-filter" class="dropdown">
+                  <option value="none">Select a Team</option>
                   <option value="Air Force">Air Force</option>
                   <option value="Akron">Akron</option>
                   <option value="Alabama">Alabama</option>
@@ -74,7 +75,7 @@
                   <option value="Arkansas Pine Bluff">Arkansas Pine Bluff</option>
                   <option value="Arkansas St.">Arkansas St.</option>
                   <option value="Army">Army</option>
-                  <option value="Auburn">Auburn</option>
+                  <option value="Auburn" selected>Auburn</option>
                   <option value="Austin Peay">Austin Peay</option>
                   <option value="Ball St.">Ball St.</option>
                   <option value="Baylor">Baylor</option>
@@ -130,7 +131,7 @@
                   <option value="Detroit">Detroit</option>
                   <option value="Drake">Drake</option>
                   <option value="Drexel">Drexel</option>
-                  <option value="Duke" selected>Duke</option>
+                  <option value="Duke">Duke</option>
                   <option value="Duquesne">Duquesne</option>
                   <option value="East Carolina">East Carolina</option>
                   <option value="East Tennessee St.">East Tennessee St.</option>
@@ -413,7 +414,7 @@
       </div>
     </form>
   </nav>
-  <div class="container-fluid" style="padding-top: 100px;">
+  <div class="container" style="padding-top: 10px;">
     <div class="row">
       <div class="col-md-6 col-sm-12 col-xs-12" id="barContainer">
         <canvas id="teamBar"></canvas>
