--- a/bracket_buddy/templates/scatter.html
+++ b/bracket_buddy/templates/scatter.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 sticky-top">
     <a class="navbar-brand" href="/" id="home">NCAA DATA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
           <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
         </li>
         <li class="nav-item active">
-          <a id="compare-scatter" class="nav-link" href="#">Graph <span class="sr-only">(current)</span></a>
+          <a id="compare-scatter" class="nav-link" href="#">Explore <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a id="reference" class="nav-link" href="/reference">Reference</a>
