--- a/bracket_buddy/templates/teamPage.html
+++ b/bracket_buddy/templates/teamPage.html
@@ -26,7 +26,7 @@
           <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
         </li>
         <li class="nav-item">
-          <a id="compare-scatter" class="nav-link" href="/scatter">Graph</a>
+          <a id="compare-scatter" class="nav-link" href="/scatter">Explore</a>
         </li>
         <li class="nav-item">
           <a id="reference" class="nav-link" href="/reference">Reference</a>
