--- a/bracket_buddy/templates/reference.html
+++ b/bracket_buddy/templates/reference.html
@@ -39,7 +39,7 @@
     <h1>Statistics Reference</h1><br>
     <h5>Adjusted EM (Adjusted Efficiency Margin)</h5>
     <ul>
-      <p>Adjusted Offensive Efficiency - Adjusted Defensive Efficiency, ideally the overall gauge of a team's quality. (raw value + 100 for graphing purposes)
+      <p>Adjusted Offensive Efficiency - Adjusted Defensive Efficiency, ideally the overall gauge of a team's quality. 
       </p>
     </ul>
     <h5>Adjusted D Efficiency</h5>
@@ -183,7 +183,7 @@
     </ul>
     <h5>2 Pt FG%</h5>
     <ul>
-      <p>Percentage of made 2 Pt FGs (two pointers made/two pointers attempted</p>
+      <p>Percentage of made 2 Pt FGs (two pointers made/two pointers attempted)</p>
     </ul>
   </div>
 
