--- a/bracket_buddy/templates/index.html
+++ b/bracket_buddy/templates/index.html
@@ -5,14 +5,92 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/reference.css') }}">
+  <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
+  <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <title>NCAA Team Data</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 sticky-top">
+  <nav class="navbar navbar-light bg-primary">
+    <a class="navbar-brand" href="/" style="font-family: 'Graduate';">
+      <img src="../static/images/basketball.svg" width="30" height="30" class="d-inline-block align-top" alt="Designed by Freepik from www.flaticon.com">
+      Bracket Buddy
+    </a>
+  </nav>
+  <div class="container-full-bg">
+  <div class="jumbotron jumbotron-fluid jumbotron-img">
+  </div>
+  <div class="container">
+    <h1>&nbsp;</h1>
+  </div>
+<div class="container">
+  <div class="row">
+    <div class="card mb-3" style="max-width: 100%;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../static/images/predict.jpg" class="card-img" alt="Predict the winner">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+        <h5 class="card-title">Predict the winner!</h5>
+        <p class="card-text">Use our machine learning algorithm to predict which NCAA Division 1 team will prevail over another.</p>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="card mb-3" style="max-width: 100%;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../static/images/headtohead.png" class="card-img" alt="Compare teams">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+        <h5 class="card-title">Head to Head</h5>
+        <p class="card-text">Pit any NCAA Division 1 from 2010 on against any other in a virtual 'game'.</p>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><div class="container">
+  <div class="row">
+    <div class="card mb-3" style="max-width: 100%;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../static/images/team.jpg" class="card-img" alt="Favorite Team stats">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+        <h5 class="card-title">Favorite team_stats</h5>
+        <p class="card-text">See all the stats of your favorite NCAA Division 1 team</p>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><div class="container">
+  <div class="row">
+    <div class="card mb-3" style="max-width: 100%;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="../static/images/march_madness_logo.jpg" class="card-img" alt="Deep dive into statistics">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+        <h5 class="card-title">Deep dive</h5>
+        <p class="card-text">Pick two stats, see how they are correlated and how the team of your choice compares.</p>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 sticky-top">
     <a class="navbar-brand active" href="#" id="home">NCAA DATA <span class="sr-only">(current)</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
@@ -34,8 +112,8 @@
         </li>
       </ul>
     </div>
-  </nav>
-  
+  </nav> -->
+
   <div class="container">
     <div class="jumbotron">
       <div id="background">
