ML_80, removed doughnut, fixed radar, comparison page

--- a/bracket_buddy/templates/comparison.html
+++ b/bracket_buddy/templates/comparison.html
@@ -794,9 +794,9 @@
     <div class="col-md-6 col-sm-12 col-xs-6" id="home-radar-ff">
       <canvas id="homeRadarFF" aspectRatio="1"></canvas>
     </div>
-    <div class="col-md-6 col-sm-12 col-xs-6" id="away-radar-ff">
+    <!-- <div class="col-md-6 col-sm-12 col-xs-6" id="away-radar-ff">
       <canvas id="awayRadarFF" aspectRatio="1"></canvas>
-    </div>
+    </div> -->
   </div>
   <hr style="border: 1px solid black;" />
   <hr style="border: 1px solid black;" />
@@ -805,31 +805,9 @@
     <div class="col-md-6 col-sm-12 col-xs-6" id="home-radar-rank">
       <canvas id="homeRadarRank" aspectRatio="1"></canvas>
     </div>
-    <div class="col-md-6 col-sm-12 col-xs-6" id="away-radar-rank">
+    <!-- <div class="col-md-6 col-sm-12 col-xs-6" id="away-radar-rank">
       <canvas id="awayRadarRank" aspectRatio="1"></canvas>
-    </div>
-  </div>
-  <hr style="border: 1px solid black;" />
-  <hr style="border: 1px solid black;" />
-  <h4 style="text-align: center">Offensive Point Distribution</h4>
-  <div class="row">
-    <div class="col-md-6 col-sm-6 col-xs-6" id="home-o-donut">
-      <canvas id="homeODonut" aspectRatio="1"></canvas>
-    </div>
-    <div class="col-md-6 col-sm-6 col-xs-6" id="away-o-donut">
-      <canvas id="awayODonut" aspectRatio="1"></canvas>
-    </div>
-  </div>
-  <hr style="border: 1px solid black;" />
-  <hr style="border: 1px solid black;" />
-  <h4 style="text-align: center">Defensive Point Distribution</h4>
-  <div class="row">
-    <div class="col-md-6 col-sm-6 col-xs-6" id="home-d-donut">
-      <canvas id="homeDDonut" aspectRatio="1"></canvas>
-    </div>
-    <div class="col-md-6 col-sm-6 col-xs-6" id="away-d-donut">
-      <canvas id="awayDDonut" aspectRatio="1"></canvas>
-    </div>
+    </div> -->
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
