changed header image

--- a/bracket_buddy/static/css/style.css
+++ b/bracket_buddy/static/css/style.css
@@ -6,7 +6,7 @@
   padding: 40px;
   margin: 0;
   background: white;
-  background-image: url(../images/predict.jpg);
+  background-image: url(../images/header.png);
   background-position: center;
 	vertical-align: inherit;
   background-size: cover;
