--- a/bracket_buddy/templates/index.html
+++ b/bracket_buddy/templates/index.html
@@ -71,9 +71,9 @@
           <img src="../static/images/predict.jpg" class="card-img" alt="Predict the winner">
         </div>
       <div class="col-md-6">
-        <div class="card-body">
+        <div class="card-body" height="100px">
           <h5 class="card-title">Predict the winner!</h5>
-          <p class="card-text">Use our machine learning algorithm to predict which NCAA Division 1 team will prevail over another.</p>
+          <p class="card-text">Use machine learning to predict which NCAA Division 1 team will prevail over another.</p>
         </div>
       </div>
       </div>
@@ -90,7 +90,7 @@
             <img src="../static/images/headtohead.png" class="card-img" alt="Compare teams">
             </div>
             <div class="col-md-6">
-              <div class="card-body">
+              <div class="card-body"  height="100px">
                 <h5 class="card-title">Head to Head</h5>
                 <p class="card-text">Pit any NCAA Division 1 from 2010 on against any other in a virtual 'game'.</p>
               </div>
@@ -111,8 +111,8 @@
           <img src="../static/images/team.jpg" class="card-img" alt="Favorite Team stats">
           </div>
           <div class="col-md-6">
-            <div class="card-body">
-              <h5 class="card-title">My Favorite Team's Statistics</h5>
+            <div class="card-body" height="100px">
+              <h5 class="card-title">Team Statistics</h5>
               <p class="card-text">See all the stats of your favorite NCAA Division 1 team</p>
             </div>
           </div>
@@ -130,9 +130,9 @@
             <img src="../static/images/march_madness_logo.jpg" class="card-img" alt="Deep dive into statistics">
           </div>
           <div class="col-md-6">
-            <div class="card-body">
+            <div class="card-body" height="100px">
               <h5 class="card-title">Deep Dive</h5>
-              <p class="card-text">Pick two stats, see how they are correlated and how the team of your choice compares.</p>
+              <p class="card-text">Pick two stats, and see how your team stacks up.</p>
             </div>
           </div>
         </div>
@@ -142,7 +142,7 @@
   </div>
 </div><!--row-->
 </div>
-<nav class="navbar navbar-light bg-primary navbar-expand-lg">
+<nav class="navbar navbar-light bg-primary navbar-expand-lg sticky-footer">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar2">
     <span class="navbar-toggler-icon"></span>
   </button>
