removing my notebooks and only keeping front end changes

--- a/bracket_buddy/static/css/style.css
+++ b/bracket_buddy/static/css/style.css
@@ -3,12 +3,11 @@
 }
 .jumbotron {
   position: relative;
-  padding: 40px;
   margin: 0;
   background: white;
-  background-image: url(../images/header.png);
-  background-position: center;
-	vertical-align: inherit;
+  background-image: url(../images/header.jpg);
+  background-position: bottom;
+	vertical-align: bottom;
   background-size: cover;
-  height: 250px;}
+  height: 200px;}
 }
