--- a/bracket_buddy/templates/index.html
+++ b/bracket_buddy/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
-  <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.css" />
+  <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <title>NCAA Team Data</title>
 </head>
@@ -16,12 +16,15 @@
     </div>
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
-    <a class="navbar-brand active" href="#" id="home">NCAA DATA <span class="sr-only">(current)</span></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+    <a class="navbar-brand active" href="/" style="font-family: 'Graduate';">
+      <img src="../static/images/basketball2.svg" width="30" height="30" class="d-inline-block align-top" alt="Designed by Freepik from www.flaticon.com">
+      Bracket Buddy
+    </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto style="font-family: 'Graduate';"">
         <li class="nav-item">
           <a id="predict" class="nav-link" href="/predict">Predict Winner</a>
         </li>
@@ -142,20 +145,16 @@
   </div>
 </div><!--row-->
 </div>
-<nav class="navbar navbar-light bg-primary navbar-expand-lg sticky-footer">
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar2">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand active" href="/" style="font-family: 'Graduate';">
-    <img src="../static/images/basketball.svg" width="30" height="30" class="d-inline-block align-top" alt="Designed by Freepik from www.flaticon.com">
-    Bracket Buddy
-  </a>
-  <div id="navbar2" class="collapse navbar-collapse">
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item d-flex justify-content-end">
+  <div id="navbar2" class="collapse navbar-collapse d-flex justify-content-end">
+  <ul class="navbar-nav mr-auto d-flex justify-content-end">
+    <li class="nav-item d-flex justify-content-right">
       <a id="reference" class="nav-link" href="/reference">Reference</a>
     </li>
-    <li class="nav-item d-flex justify-content-end">
+    <li class="nav-item d-flex justify-content-right">
     <a class="nav-link" data-toggle="collapse" href="#collapseInfo" role="button" aria-expanded="false" aria-controls="collapseExample">About</a></li>
   </ul>
   </div>
