--- a/bracket_buddy/templates/comparison.html
+++ b/bracket_buddy/templates/comparison.html
@@ -790,13 +790,21 @@
   <hr style="border: 1px solid black;" />
   <hr style="border: 1px solid black;" />
   <div class="row">
-    <div class="col-md-6 col-sm-12 col-xs-6" id="home-radar-ff">
+    <div class="col-md-6 col-sm-12 col-xs-12" id="home-radar-ff">
         <h4 style="text-align: center">Four Factors</h4>
       <canvas id="homeRadarFF" aspectRatio="1"></canvas>
     </div>
-    <div class="col-md-6 col-sm-12 col-xs-6" id="home-radar-rank">
+    <div class="col-md-6 col-sm-12 col-xs-12" id="home-radar-rank">
         <h4 style="text-align: center">National Rankings</h4>
       <canvas id="homeRadarRank" aspectRatio="1"></canvas>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-sm-12 col-xs-12" id="over-under-pdf">
+      <canvas id="overUnderPDF" aspectRatio="1"></canvas>
+    </div>
+    <div class="col-md-6 col-sm-12 col-xs-12" id="spread-pdf">
+      <canvas id="spreadPDF" aspectRatio="1"></canvas>
     </div>
   </div>
   
@@ -813,6 +821,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="{{ url_for('static', filename='js/probability.js') }}"></script>
   <script src="{{ url_for('static', filename='js/radar.js') }}"></script>
   <script src="{{ url_for('static', filename='js/barChart.js') }}"></script>
   <script src="{{ url_for('static', filename='js/doughnuts.js') }}"></script>
