--- a/bracket_buddy/static/css/style.css
+++ b/bracket_buddy/static/css/style.css
@@ -3,6 +3,7 @@
 }
 .jumbotron {
   position: relative;
+	top:100px;
   margin: 0;
   background: white;
   background-image: url(../images/header.jpg);
