adjusted alignment of nav bar

--- a/bracket_buddy/templates/index.html
+++ b/bracket_buddy/templates/index.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
-    <a class="navbar-brand active" href="/" style="font-family: 'Graduate';">
+    <a class="navbar-brand active flex-grow-1" href="/" style="font-family: 'Graduate';">
       <img src="../static/images/basketball2.svg" width="30" height="30" class="d-inline-block align-top" alt="Designed by Freepik from www.flaticon.com">
       Bracket Buddy
     </a>
@@ -24,7 +24,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto style="font-family: 'Graduate';"">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a id="predict" class="nav-link" href="/predict">Predict Winner</a>
         </li>
