--- a/bracket_buddy/templates/scatter.html
+++ b/bracket_buddy/templates/scatter.html
@@ -2,35 +2,39 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/scatter.css') }}">
-
-  <title>NCAA Basketball</title>
+  <title>Bracket Buddy - Deep Dive</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 sticky-top">
-    <a class="navbar-brand" href="/" id="home">NCAA DATA</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand active flex-grow-1" href="/" style="font-family: 'Graduate';">
+      <img src="../static/images/basketball2.svg" width="30" height="30" class="d-inline-block align-top" alt="Designed by Freepik from www.flaticon.com">
+      Bracket Buddy
+    </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a id="team-page" class="nav-link" href="/team">Team Page</a>
+          <a id="predict" class="nav-link" href="/predict">Predict Winner</a>
         </li>
         <li class="nav-item">
-          <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
-        </li>
-        <li class="nav-item active">
-          <a id="compare-scatter" class="nav-link" href="#">Explore <span class="sr-only">(current)</span></a>
+          <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
         </li>
         <li class="nav-item">
-          <a id="reference" class="nav-link" href="/reference">Reference</a>
+          <a id="compare-teams" class="nav-link" href="/comparison">Head to Head</a>
+        </li>
+        <li class="nav-item">
+          <a id="compare-scatter" class="nav-link" href="/scatter">Deep Dive</a>
         </li>
       </ul>
     </div>
