--- a/bracket_buddy/templates/teamPage.html
+++ b/bracket_buddy/templates/teamPage.html
@@ -5,42 +5,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <title>Team Page</title>
+  <title>Bracket Buddy - Team Statistics</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 sticky-top">
-    <a class="navbar-brand" href="/" id="home">NCAA DATA</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand active flex-grow-1" href="/" style="font-family: 'Graduate';">
+      <img src="../static/images/basketball2.svg" width="30" height="30" class="d-inline-block align-top" alt="Designed by Freepik from www.flaticon.com">
+      Bracket Buddy
+    </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a id="team-page" class="nav-link" href="#">Team Page<span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a id="predict" class="nav-link" href="/predict">Predict Winner</a>
         </li>
         <li class="nav-item">
-          <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
+          <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
         </li>
         <li class="nav-item">
-          <a id="compare-scatter" class="nav-link" href="/scatter">Explore</a>
+          <a id="compare-teams" class="nav-link" href="/comparison">Head to Head</a>
         </li>
         <li class="nav-item">
-          <a id="reference" class="nav-link" href="/reference">Reference</a>
+          <a id="compare-scatter" class="nav-link" href="/scatter">Deep Dive</a>
         </li>
       </ul>
     </div>
-    <form class="navbar-form navbar-left">
-      <div class="form-group" id="change-team">
-        <div id="team-select">
-          <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <label for="team-year-filter">Year</label>
+  </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <form class="d-flex w-100 justify-content-end form-inline">
+        <div class="form-group row" id="change-team">
+              <label for="team-year-filter" class="my-1 mr-2">Year</label>
               <div>
-                <select id="team-year-dropdown" name="team-year-filter" class="dropdown">
+                <select id="team-year-dropdown" name="team-year-filter" class="custom-select my-1 mr-sm-2">
                   <option value="2010">2010</option>
                   <option value="2011">2011</option>
                   <option value="2012">2012</option>
@@ -52,12 +56,10 @@
                   <option value="2018">2018</option>
                   <option value="2019" selected>2019</option>
                 </select>
-              </div>
             </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <label for="team-filter">Team</label>
+              <label for="team-filter" class="my-1 mr-2">Team</label>
               <div>
-                <select id="team-dropdown" name="team-filter" class="dropdown">
+                <select id="team-dropdown" name="team-filter" class="custom-select my-1 mr-sm-2">
                   <option value="none">Select a Team</option>
                   <option value="Air Force">Air Force</option>
                   <option value="Akron">Akron</option>
@@ -407,11 +409,8 @@
                   <option value="Yale">Yale</option>
                   <option value="Youngstown St.">Youngstown St.</option>
                 </select>
-              </div>
             </div>
           </div>
-        </div>
-      </div>
     </form>
   </nav>
   <div class="container" style="padding-top: 10px;">
